ajuste nas redes sociais

--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://avatars1.githubusercontent.com/u/316902?v=3&s=460
 footer-links:
   dribbble:
   email: benigno.marcello@gmail.com
-  facebook: facebook.com/marcello.benigno
-  flickr: flickr.com/photos/107495683@N07/
-  github: github.com/marcellobenigno
-  instagram: instagram.com/marcellobenigno
-  linkedin: br.linkedin.com/pub/dir/Marcello/Benigno
+  facebook: marcello.benigno
+  flickr: 107495683@N07
+  github: marcellobenigno
+  instagram: marcellobenigno
+  linkedin: Marcello/Benigno
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: marcellobenigno
