--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr: 107495683@N07
   github: marcellobenigno
   instagram: marcellobenigno
-  linkedin:
+  linkedin: marcellobenigno
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: marcellobenigno
