--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Marcello Benigno
 
 # Short bio or description (displayed in the header)
-description: Professor do CST em Geoprocessamento - IFPB
+description: Prof. do CST em Geoprocessamento - IFPB
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/316902?v=3&s=460
